[package]
name = "near-env"
version = "0.1.0"
authors = ["Luis Mastrangelo <luismastrangelo@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["near"]
repository = "https://github.com/acuarica/near-env"
homepage = "https://github.com/acuarica/near-env"
description = """
NEAR env log macro
"""

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.14", features = ["full", "fold", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
near-sdk = "2.0.1"
