[package]
name = "near-env"
version = "0.1.6"
authors = ["Luis Mastrangelo <luismastrangelo@gmail.com>"]
edition = "2018"
license = "MIT"
categories = ["wasm"]
repository = "https://github.com/acuarica/near-env"
homepage = "https://github.com/acuarica/near-env"
description = """
Unofficial NEAR envlog macro to log every method call inside `near_bindgen`
"""

[lib]
proc-macro = true

[dependencies]
syn = {version = "1.0.14", features = ["full", "fold", "visit"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
near-sdk = "3.0.0-pre.2"
